--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-    testCompile 'junit:junit:4.12'
+    //testCompile 'junit:junit:4.12'
 
-    androidTestCompile 'org.testng:testng:6.9.6'
+   // androidTestCompile 'org.testng:testng:6.9.6'
 }
