--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
                 android:value="MainActivity" />
         </activity>
 
+        <provider
+            android:name=".data.WeatherProvider"
+            android:authorities="com.example.android.sunshine.app">
+
+        </provider>
     </application>
 
 
