--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,18 @@
 
         <provider
             android:name=".data.WeatherProvider"
-            android:authorities="com.example.android.sunshine.app">
+            android:authorities="com.example.android.sunshine.app"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.myapp.">
 
         </provider>
     </application>
 
+    <permission
+        android:name="com.myapp.LICENSE_TO_KILL"
+        android:protectionLevel="dangerous"
+        android:label="Licensed to Kill">
 
+    </permission>
 </manifest>
